Add ejercicios practica 1 y cambia estructura

--- a/practicas/soluciones/practica1.tex
+++ b/practicas/soluciones/practica1.tex
@@ -9,6 +9,15 @@
 
 \maketitle
 
-\input{./ejercicio1}
+\input{./practica1/ejercicio1}
+\input{./practica1/ejercicio2}
+\input{./practica1/ejercicio3}
+\input{./practica1/ejercicio5}
+\input{./practica1/ejercicio6}
+\input{./practica1/ejercicio7}
+\input{./practica1/ejercicio8}
+\input{./practica1/ejercicio9}
+\input{./practica1/ejercicio10}
+\input{./practica1/ejercicio11}
 
 \end{document}
